# gameplay

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  connect4.json  fly.toml
.cargo/: config.toml
agents/saolsen/connect4/mcts/: Cargo.toml
agents/saolsen/connect4/mcts/src/: main.rs  mcts.rs
agents/saolsen/connect4/rand/: Cargo.toml  Dockerfile
agents/saolsen/connect4/rand/src/: main.rs
docker/: gameplay.Dockerfile  saolsen_connect4_mcts.Dockerfile  saolsen_connect4_rand.Dockerfile
gameplay/: Cargo.toml
gameplay-cli/: Cargo.toml
gameplay-cli/src/: main.rs  tui.rs
gameplay-computer/: Cargo.toml  README.md  astro.config.mjs  build.sh  package-lock.json  package.json  tsconfig.json  vercel.json
gameplay-computer/api/: test.rs
gameplay-computer/src/: auth.ts  db.ts  lib.rs  middleware.ts
gameplay-computer/src/pages/: index.astro
gameplay/src/: lib.rs
gameplay/src/games/: connect4.rs  mod.rs
web/: Cargo.toml  output.css  package-lock.json  tailwind.config.js
web/src/: auth.rs  config.rs  connect4.rs  forms.rs  main.rs  matches.rs  migrations.rs  templates.rs  types.rs  web.rs
web/src/forms/: create_agent.rs  create_match.rs  mod.rs
web/templates/: app_index.html  app_layout.html  app_playground.html  connect4_match.html  create_agent_form.html  create_match_form.html  create_match_form_selects.html  refresh.html  web_layout.html
