[package]
name = "gameplay-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gameplay"
path = "src/main.rs"

[dependencies]
gameplay = { path = "../gameplay" }
crossterm = "0.26.1"
anyhow = "1.0.72"
reqwest = {version ="0.11.18", default-features = false, features = ["rustls-tls", "json"]}
tokio = { version = "1", features = ["full"] }
clap = { version = "4.3.21", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v7"]}
