[package]
name = "gameplay-computer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros"] }
serde_json = { version = "1", features = ["raw_value"] }
# Documentation: https://docs.rs/vercel_runtime/latest/vercel_runtime
vercel_runtime = { version = "1.1.0" }

[lib]
path = "src/lib.rs"

# At some point we can hopefully use the route bundler so we don't need an exe per route.
[[bin]]
name = "test"
path = "api/test.rs"
