[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.0", features = ["with-axum"]}
askama_axum = "0.3.0"
async-stream = "0.3.5"
async-trait = "0.1.68"
axum = { git = "https://github.com/tokio-rs/axum.git" }
base64 = "0.21.2"
console-subscriber = "0.1.9"
cookie = "0.17.0"
futures = "0.3.28"
jwt-simple = "0.11.5"
lazy_static = "1.4.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.22.0"
reqwest = {version ="0.11.18", default-features = false, features = ["rustls-tls", "json"]}
rusqlite = { version = "0.29.0", features = ["bundled"]}
rusqlite_migration = "1.0.2"
sentry = { version = "0.31.3", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls", "tracing"] }
sentry-tracing = "0.31.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
thiserror = "1.0.40"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version="0.4.0", features = ["trace"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
